--- a/AppTFG/AppTFG/Paginas/LoginPage.xaml
+++ b/AppTFG/AppTFG/Paginas/LoginPage.xaml
@@ -7,20 +7,30 @@
              mc:Ignorable="d"
              x:Class="AppTFG.Paginas.LoginPage"
              Shell.NavBarIsVisible="False"
-             Title="Iniciar sesión">
+             Title="Iniciar sesión"
+             BackgroundImageSource="pita.jpg">
 
     <ContentPage.BindingContext>
         <vm:LoginView />
     </ContentPage.BindingContext>
 
     <ContentPage.Content>
-        <StackLayout Padding="10,0,10,0" VerticalOptions="Center" >
-            <Entry Placeholder="Usuario" MaxLength="10" IsSpellCheckEnabled="True" IsTextPredictionEnabled="True" TextColor="#FFB13F55" PlaceholderColor="#FFEE506F"/>
-            <Entry Placeholder="Contraseña" MaxLength="10" IsPassword="True" IsSpellCheckEnabled="True" IsTextPredictionEnabled="True" TextColor="#FFB13F55" PlaceholderColor="#FFEE506F"/>
-            <Button VerticalOptions="Center"  Text="Login" Command="{Binding LoginCommand}" BackgroundColor="#FFB13F55"/>
-            <Button VerticalOptions="End"  Text="Login with Facebook" BackgroundColor="#FF3B5998"/>
-            <Button VerticalOptions="End" Text="Login with Google" BackgroundColor="#FF50C7C7"/>
-            <Button VerticalOptions="End" Text="Login with Twitter" BackgroundColor="#FF1DA1F2"/>
+        <StackLayout VerticalOptions="Center" >
+            <Entry Placeholder="Usuario" MaxLength="10" IsSpellCheckEnabled="True" IsTextPredictionEnabled="True" TextColor="#FFB13F55" PlaceholderColor="#FFEE506F" Margin="10,0,10,10"/>
+            <Entry Placeholder="Contraseña" MaxLength="10" IsPassword="True" IsSpellCheckEnabled="True" IsTextPredictionEnabled="True" TextColor="#FFB13F55" PlaceholderColor="#FFEE506F" Margin="10,0,10,10"/>
+            <Button HorizontalOptions="Center"  Text="Iniciar sesión" Command="{Binding LoginCommand}" BackgroundColor="#FFB13F55" Margin="60,0,60,0"/>
+            <Label Text="¿No tiene cuenta aún?" HorizontalOptions="Start" Margin="20,10,0,0"/>
+            <Button HorizontalOptions="Start" BackgroundColor="Transparent" Text="Registrarse" Command="{Binding LoginCommand}" Margin="20,0,0,0"/>
+            <Grid VerticalOptions="FillAndExpand" HorizontalOptions="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition Width="40"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" BackgroundColor="Transparent" ImageSource="facebook.png" HorizontalOptions="Center"/>
+                <Button Grid.Column="1" BackgroundColor="Transparent" ImageSource="twitter.png" HorizontalOptions="Center"/>
+                <Button Grid.Column="2" BackgroundColor="Transparent" ImageSource="google.png" HorizontalOptions="Center"/>
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 
